# sfss

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml
resources/: highlight.js  languages.json
src/: context.rs  main.rs  sfss_format.rs  tests.rs  utils.rs
src/sfss_format/: fileflags.rs  filetype.rs  mod.rs  sfss_format.rs
src/sfss_templates/: mod.rs
templates/: code.hbs  index.hbs  upload.hbs  upload_api.hbs  upload_api_password.hbs  upload_password.hbs
